# kanban_app

./: .gitignore  README.md  justfile  start.sh
.github/instructions/: git-workflow.instructions.md
.github/skills/git-merge/: SKILL.md
.github/skills/git-ritual/: SKILL.md
backend/: pyproject.toml  requirements.txt
backend/app/: database.py  main.py  models.py  scheduler.py  schemas.py
backend/app/routers/: memos.py  notifications.py  sync.py  tags.py  tickets.py
frontend/: .env.example  capacitor.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/android/: capacitor.settings.gradle  gradle.properties
frontend/android/app/: build.gradle  capacitor.build.gradle
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/res/drawable/: ic_launcher_foreground_scaled.xml  ic_stat_cherry.xml
frontend/android/app/src/main/res/values/: strings.xml
frontend/ios/App/: Podfile
frontend/ios/App/App/: Info.plist
frontend/ios/App/App.xcodeproj/: project.pbxproj
frontend/public/: sw.js
frontend/src/: App.tsx  index.css
frontend/src/components/: DashboardPage.tsx  FilterBar.tsx  KanbanBoard.tsx  KanbanColumn.tsx  MarkdownField.tsx  MemoCard.tsx  MemoModal.tsx  MemoTab.tsx  ProjectTab.tsx  RoutineTab.tsx  Sidebar.tsx  TagBadge.tsx  TicketCard.tsx  TicketModal.tsx  WeekendCleanupModal.tsx
frontend/src/components/layout/: Header.tsx
frontend/src/hooks/: useLiveUpdate.ts  useLocalNotifications.ts
frontend/src/store/: useStore.ts
frontend/src/types/: index.ts
(+2 files in other folders)
